force-app/main/default/objects/Oportunidad__c/fields/Finalidad__c.field-meta.xml
<CustomField>
    <fullName>Finalidad__c</fullName>
    <inlineHelpText>RO</inlineHelpText>
    <label>Finalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apertura cliente</fullName>
            </value>
            <value>
                <fullName>Rentabilidad económica</fullName>
            </value>
            <value>
                <fullName>Desarrollo conocimiento</fullName>
            </value>
            <value>
                <fullName>Posición defensiva</fullName>
            </value>
            <value>
                <fullName>Rentabilidad futura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>