force-app/main/default/objects/Oportunidad__c/fields/FiscalQuarter__c.field-meta.xml
<CustomField>
    <fullName>FiscalQuarter__c</fullName>
    <label>FiscalQuarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>