force-app/main/default/objects/Oportunidad__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>FiscalYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>