force-app/main/default/objects/Oportunidad__c/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <inlineHelpText>RO</inlineHelpText>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hitos</fullName>
            </value>
            <value>
                <fullName>Horas trabajadas</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Bimensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>