force-app/main/default/objects/Oportunidad__c/fields/Gestion_CV__c.field-meta.xml
<CustomField>
    <fullName>Gestion_CV__c</fullName>
    <inlineHelpText>Estimación de la dedicación de horas de gestión de CVs en la ON. Para completarlo, el RO debe coordinarse con Soporte a Ofertas</inlineHelpText>
    <label>Gestión Curricular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>