force-app/main/default/objects/Oportunidad__c/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>