force-app/main/default/objects/Oportunidad__c/fields/GUID_Clip__c.field-meta.xml
<CustomField>
    <fullName>GUID_Clip__c</fullName>
    <label>GUID Clip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>