force-app/main/default/objects/Oportunidad__c/fields/Hora_apertura__c.field-meta.xml
<CustomField>
    <fullName>Hora_apertura__c</fullName>
    <inlineHelpText>Opening time of the bid</inlineHelpText>
    <label>Hora apertura</label>
    <type>Time</type>
</CustomField>