force-app/main/default/objects/Oportunidad__c/fields/Hora_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_presentacion__c</fullName>
    <label>Hora presentación</label>
    <type>Time</type>
</CustomField>