force-app/main/default/objects/Oportunidad__c/fields/Horizontal__c.field-meta.xml
<CustomField>
    <fullName>Horizontal__c</fullName>
    <label>Horizontal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H-SCSO ADJUNTO</fullName>
            </value>
            <value>
                <fullName>H-ING. CIVIL y ARQ</fullName>
            </value>
            <value>
                <fullName>H-ING. INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>H-AEROSPACIAL</fullName>
            </value>
            <value>
                <fullName>H-INTEGRACIONES INTEL.</fullName>
            </value>
            <value>
                <fullName>H-INGENIERÍA 4.0</fullName>
            </value>
            <value>
                <fullName>H-CSO IND</fullName>
            </value>
            <value>
                <fullName>H-BPO</fullName>
            </value>
            <value>
                <fullName>H-AD/AM SERVICES</fullName>
            </value>
            <value>
                <fullName>H-ITO</fullName>
            </value>
            <value>
                <fullName>H-SAP</fullName>
            </value>
            <value>
                <fullName>H-SALESFORCE</fullName>
            </value>
            <value>
                <fullName>H-SERVICIOS LATAM</fullName>
            </value>
            <value>
                <fullName>H-STAFF SD&amp;TI</fullName>
            </value>
            <value>
                <fullName>H-CIENCIA DEL DATO &amp; PROCESOS</fullName>
            </value>
            <value>
                <fullName>H-EXTERNOS SD&amp;TI</fullName>
            </value>
            <value>
                <fullName>H-M2C DATOS</fullName>
            </value>
            <value>
                <fullName>H-M2C DESARROLLO</fullName>
            </value>
            <value>
                <fullName>H-M2C ITO</fullName>
            </value>
            <value>
                <fullName>H-PLANIFICACION, RIESGO Y CONTROL ING</fullName>
            </value>
            <value>
                <fullName>H-PLANIFICACION, RIESGO Y CONTRO DS&amp;TI</fullName>
            </value>
            <value>
                <fullName>H-SISTEMAS DE GESTION ING</fullName>
            </value>
            <value>
                <fullName>H-SISTEMAS DE GESTION DS&amp;TI</fullName>
            </value>
            <value>
                <fullName>H-SISTEMAS DE GESTION AAC</fullName>
            </value>
            <value>
                <fullName>H-DIGITAL</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>DAA</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Digital-Latam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>