force-app/main/default/objects/Oportunidad__c/fields/id_registro_dataverso__c.field-meta.xml
<CustomField>
    <fullName>id_registro_dataverso__c</fullName>
    <description>Referencia del expediente en MS Power Automate</description>
    <inlineHelpText>Referencia del expediente en MS Power Automate</inlineHelpText>
    <label>ID Registro Dataverso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>