force-app/main/default/objects/Oportunidad__c/fields/Importe_adjudicacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_adjudicacion__c</fullName>
    <description>Importe adjudicación Ayesa</description>
    <inlineHelpText>Total Amount for Ayesa Company at the moment of being awarded (It could be different from final amount contracted)</inlineHelpText>
    <label>Importe UTE Ayesa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>