force-app/main/default/objects/Oportunidad__c/fields/Importe_Business_Developer__c.field-meta.xml
<CustomField>
    <fullName>Importe_Business_Developer__c</fullName>
    <formula>Importe_total_sin_IVA__c *Porcentaje_Business_Developer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Business Developer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>