force-app/main/default/objects/Oportunidad__c/fields/Importe_Comercial_Apoyo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Comercial_Apoyo__c</fullName>
    <formula>Importe_total_sin_IVA__c  * PORCCOMAPOYO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Comercial Apoyo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>