force-app/main/default/objects/Oportunidad__c/fields/Importe_euros__c.field-meta.xml
<CustomField>
    <fullName>Importe_euros__c</fullName>
    <label>Importe en Euros</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>