force-app/main/default/objects/Oportunidad__c/fields/importe_mtoHard__c.field-meta.xml
<CustomField>
    <fullName>importe_mtoHard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Importe Mtto. HW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>