force-app/main/default/objects/Oportunidad__c/fields/Importe_Ponderado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Ponderado__c</fullName>
    <description>Contratado del año teniendo en cuenta la participación de Ayesa</description>
    <formula>Participacion_Ayesa__c *  Contratado_a_o_oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contracted for the year taking into account the participation by part of Ayesa</inlineHelpText>
    <label>Importe Ponderado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>