force-app/main/default/objects/Oportunidad__c/fields/importe_productoHard__c.field-meta.xml
<CustomField>
    <fullName>importe_productoHard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Importe HW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>