force-app/main/default/objects/Oportunidad__c/fields/Importe_total_ofertado_sin_IVA_local__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_ofertado_sin_IVA_local__c</fullName>
    <description>utilizado para parte IB Latam</description>
    <label>Importe total ofertado (sin IVA) local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>