force-app/main/default/objects/Oportunidad__c/fields/Importe_total_sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_sin_IVA__c</fullName>
    <inlineHelpText>En el campo Importe total ofertado (sin IVA) en Euros se indicará todo el contrato (incluida la parte del posible socio) y en el Importe SAP (€) se indicará la parte del contrato correspondiente a Ayesa durante el presente ejercicio.</inlineHelpText>
    <label>Importe total ofertado (sin IVA) Euros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>