force-app/main/default/objects/Oportunidad__c/fields/IMPORTEOCP__c.field-meta.xml
<CustomField>
    <fullName>IMPORTEOCP__c</fullName>
    <label>Importe OCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>