force-app/main/default/objects/Oportunidad__c/fields/Informacion_desglose__c.field-meta.xml
<CustomField>
    <fullName>Informacion_desglose__c</fullName>
    <label>Informacion desglose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>