force-app/main/default/objects/Oportunidad__c/fields/Innovacion__c.field-meta.xml
<CustomField>
    <fullName>Innovacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A ser confirmado por el Director de Mercado/División</description>
    <inlineHelpText>A ser confirmado por el Director de Mercado/División</inlineHelpText>
    <label>Innovación</label>
    <type>Checkbox</type>
</CustomField>