force-app/main/default/objects/Oportunidad__c/fields/Innovation_Work_Stream__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Work_Stream__c</fullName>
    <label>Innovation Work Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WS1</fullName>
                <label>Next generation of AI-powered user experiences</label>
            </value>
            <value>
                <fullName>WS2</fullName>
                <label>Data-driven decision making and business operations</label>
            </value>
            <value>
                <fullName>WS3</fullName>
                <label>Secured cloud infrastructures and platforms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>