force-app/main/default/objects/Oportunidad__c/fields/IRPO__c.field-meta.xml
<CustomField>
    <fullName>IRPO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Ha incluido IRPO en Alejandría? http://Alejandria.ayesa.com</description>
    <inlineHelpText>Included the IRPO in Alejandría? http://Alejandria.ayesa.com</inlineHelpText>
    <label>¿Ha incluido el IRPO en Alejandría?</label>
    <type>Checkbox</type>
</CustomField>