force-app/main/default/objects/Oportunidad__c/fields/Jefe_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Jefe_de_Proyecto__c</fullName>
    <label>Jefe de Proyecto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>