force-app/main/default/objects/Oportunidad__c/fields/K__c.field-meta.xml
<CustomField>
    <fullName>K__c</fullName>
    <label>% K</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>