force-app/main/default/objects/Oportunidad__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <inlineHelpText>Indica el id que le corresponde a la oportunidad</inlineHelpText>
    <label>Lead Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>