force-app/main/default/objects/Oportunidad__c/fields/Licencias__c.field-meta.xml
<CustomField>
    <fullName>Licencias__c</fullName>
    <inlineHelpText>RO</inlineHelpText>
    <label>% Licencias</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>