force-app/main/default/objects/Oportunidad__c/fields/Linea_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Servicio__c</fullName>
    <label>Línea de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direccion_Operaciones__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Horizontal</valueSetName>
    </valueSet>
</CustomField>