force-app/main/default/objects/Oportunidad__c/fields/Margen_Business_Developer__c.field-meta.xml
<CustomField>
    <fullName>Margen_Business_Developer__c</fullName>
    <formula>Margen_Previsto_Euros__c*Porcentaje_Business_Developer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Business Developer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>