force-app/main/default/objects/Oportunidad__c/fields/Margen_Comercial_Apoyo__c.field-meta.xml
<CustomField>
    <fullName>Margen_Comercial_Apoyo__c</fullName>
    <formula>Margen_Previsto_Euros__c * PORCCOMAPOYO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Comercial Apoyo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>