force-app/main/default/objects/Oportunidad__c/fields/margen_mtoSoft__c.field-meta.xml
<CustomField>
    <fullName>margen_mtoSoft__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margen Mtto. SW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>