force-app/main/default/objects/Oportunidad__c/fields/Margen_Previsto_Euros__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto_Euros__c</fullName>
    <label>Margen Previsto Euros</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>