force-app/main/default/objects/Oportunidad__c/fields/Margen_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Margen_Propietario__c</fullName>
    <formula>Margen_Previsto_Euros__c- Margen_Comercial_Apoyo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Propietario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>