force-app/main/default/objects/Oportunidad__c/fields/margen_servicio__c.field-meta.xml
<CustomField>
    <fullName>margen_servicio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margen Servicio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>