force-app/main/default/objects/Oportunidad__c/fields/Margen_total_IB__c.field-meta.xml
<CustomField>
    <fullName>Margen_total_IB__c</fullName>
    <label>Margen total IB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>