force-app/main/default/objects/Oportunidad__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direccion_Operaciones__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>60034542</fullName>
                <label>BFSI &amp; TMT</label>
            </value>
            <value>
                <fullName>60029413</fullName>
                <label>DIGITAL ADMINISTRATION &amp; HEALTH</label>
            </value>
            <value>
                <fullName>60029427</fullName>
                <label>ENERGY &amp; UTILITIES</label>
            </value>
            <value>
                <fullName>60029512</fullName>
                <label>INDUSTRY, CONSUMER &amp; BUSINESS SERVICE</label>
            </value>
            <value>
                <fullName>60029482</fullName>
                <label>RESOURCES &amp; ENVIRONMENT</label>
            </value>
            <value>
                <fullName>60029494</fullName>
                <label>TRANSPORTATION &amp; CITIES</label>
            </value>
            <value>
                <fullName>60035584</fullName>
                <label>V-SMEs</label>
            </value>
            <value>
                <fullName>60030704</fullName>
                <label>INNOVATION</label>
            </value>
            <value>
                <fullName>60035586</fullName>
                <label>V-LATAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>