force-app/main/default/objects/Oportunidad__c/fields/Modo_de_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Modo_de_presentacion__c</fullName>
    <label>Modo de presentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Telemática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>