force-app/main/default/objects/Oportunidad__c/fields/Mostrar_OCP_seccion__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_OCP_seccion__c</fullName>
    <label>Mostrar OCP seccion</label>
    <length>2</length>
    <type>Text</type>
</CustomField>