force-app/main/default/objects/Oportunidad__c/fields/N_mes_presentacion__c.field-meta.xml
<CustomField>
    <fullName>N_mes_presentacion__c</fullName>
    <formula>MONTH( Fecha_limite_de_presentacion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº mes presentacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>