force-app/main/default/objects/Oportunidad__c/fields/N_Oportunidad_Industria__c.field-meta.xml
<CustomField>
    <fullName>N_Oportunidad_Industria__c</fullName>
    <label>Nº Oportunidad (Industria)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>