force-app/main/default/objects/Oportunidad__c/fields/Nacional__c.field-meta.xml
<CustomField>
    <fullName>Nacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nacional</label>
    <type>Checkbox</type>
</CustomField>