force-app/main/default/objects/Oportunidad__c/fields/Necesidad_de_financiacion__c.field-meta.xml
<CustomField>
    <fullName>Necesidad_de_financiacion__c</fullName>
    <label>Necesidad de financiación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>