force-app/main/default/objects/Oportunidad__c/fields/Negocio_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Negocio_Recurrente__c</fullName>
    <label>Negocio Recurrente/Nuevo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurrente</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>