force-app/main/default/objects/Oportunidad__c/fields/NextGeneration__c.field-meta.xml
<CustomField>
    <fullName>NextGeneration__c</fullName>
    <label>NextGeneration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si, con Kit digital</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>