force-app/main/default/objects/Oportunidad__c/fields/No_existe_Limitacion__c.field-meta.xml
<CustomField>
    <fullName>No_existe_Limitacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No existe Limitacion</label>
    <type>Checkbox</type>
</CustomField>