force-app/main/default/objects/Oportunidad__c/fields/Nombre_Corto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Corto__c</fullName>
    <label>Título Oficial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>